--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "21.1.2"
 
     defaultConfig {
-        applicationId "com.example.lxiao.aaheper"
+        applicationId "com.example.lxiao.aahelper"
         minSdkVersion 10
         targetSdkVersion 21
         versionCode 1
