finish type manage it can work now

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,11 +14,13 @@
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
+
             </intent-filter>
         </activity>
         <activity android:name=".activity.ActivityUser"></activity>
         <activity android:name=".activity.ActivityBooks"></activity>
         <activity android:name=".activity.ActivityType"></activity>
+        <activity android:name=".activity.ActivityTypeEditorAdd"></activity>
     </application>
 
 </manifest>
